# MFilerTool

./: CMakeLists.txt  CodeReview.md  Makefile  README.md  sloppy_build.sh
cmake/: FindSDL2.cmake
common/: Logger.cpp  Logger.h  dongaLogger.cpp  dongaLogger.h  pch.H
src/: GenericTransferQueue.h  InputHandler.cpp  InputHandler.h  OutputProcessor.cpp  OutputProcessor.h  PriorityTransferQueue.cpp  PriorityTransferQueue.h  TransferQueue.cpp  TransferQueue.h  main.cpp
test/: bad.csv  input.csv  price.csv
